--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <div class="panel">
   <a routerLink="/matches">Matches</a>
   <a routerLink="/tasks">Tasks</a>
+  <a routerLink="/langport">Lang port</a>
 </div>
 <div class="panel panel-default">
   <div class="panel-body">
