--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+.body             { background: #080808; color:#fff;}
 .page-wrapper     { margin: 10px auto; padding: 3px; }
 
 
